--- a/community.html
+++ b/community.html
@@ -12,7 +12,7 @@
         <div class="container-fluid backgroundimg">
             <div class="row">
               <div class="col mx-5">
-                <img src="./images/discordlogo.svg" alt="" width="130" height="110">
+                <img src="./community-images/discordlogo.svg" alt="" width="130" height="110">
               </div>
             </div>
           </div>
@@ -26,15 +26,15 @@
                 <div class="row flex-column">
                   
                     <div class="col discordlogoformimg text-center">
-                      <img src="./images/discordlogo.svg" alt="" width="130" height="110">
+                      <img src="./community-images/discordlogo.svg" alt="" width="130" height="110">
                     </div>
                   
-                    <div class="col text-center mb-2 mt-2 buildcraftimg"><img src="./images/buildcraft.png" alt="" width="70" height="50" class="border-rounded mt-3 mb-3"></div>
+                    <div class="col text-center mb-2 mt-2 buildcraftimg"><img src="./community-images/buildcraft.png" alt="" width="70" height="50" class="border-rounded mt-3 mb-3"></div>
                     <div class="col text-center mb-1 text-light formtext">infamous (infamousno1) invited you to join</div>
                     <div class="col text-center text-light"><h4>The Odin Project</h4></div>
                     <div class="col  d-flex justify-content-center mb-4">
-                        <div class="row-6 text-light formtext"><img src="./images/greendot.png" alt="">15,001 Online</div>
-                        <div class="row-6 ms-3 text-light formtext"><img src="./images/icons8-dot-24.png" alt="">94,900 Members</div>
+                        <div class="row-6 text-light formtext"><img src="./community-images/greendot.png" alt="">15,001 Online</div>
+                        <div class="row-6 ms-3 text-light formtext"><img src="./community-images/greendot.png" alt="">94,900 Members</div>
                     </div>
                 </div>
                 <div class="row flex-column">
