--- a/all-paths.html
+++ b/all-paths.html
@@ -33,19 +33,19 @@
         <form class="d-flex">
           <ul class="nav justify-content-end display-none-txt1">
             <li class="nav-item">
-              <a class="nav-link active link-dark fw-normal" aria-current="page" href="#">All Paths</a>
+              <a class="nav-link active link-dark fw-normal" aria-current="page" href="./all-paths.html">All Paths</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link link-dark fw-normal" href="#">About</a>
+              <a class="nav-link link-dark fw-normal" href="./about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link link-dark fw-normal" href="#">Community</a>
+              <a class="nav-link link-dark fw-normal" href="./community.html">Community</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link link-dark fw-normal" href="#">Support us</a>
+              <a class="nav-link link-dark fw-normal" href="./support.html">Support us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link link-dark fw-normal" href="#">Sign in</a>
+              <a class="nav-link link-dark fw-normal" href="./signup.html">Sign in</a>
             </li>
             <li>
               <img src="./odin-project-images/icons8-brightness-30.png" onclick="myFunction()">
@@ -54,7 +54,7 @@
             <a class="nav-link link-dark fw-normal" href="#"><img src="./odin-project-images/icons8-brightness-30.png"
                 alt="" class="w-75" onclick="myfunction()"></a>
           </li> -->
-            <button class="btn btn-outline-success get-started-txt" type="submit">Get Started</button>
+            <button class="btn btn-outline-success get-started-txt" type="submit"><a style="text-decoration: none; color: white;" href="./getstarted.html">Get Started</a></button>
 
           </ul>
         </form>
