--- a/support.html
+++ b/support.html
@@ -24,19 +24,19 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">All Paths</a>
+                <a class="nav-link active" aria-current="page" href="./all-paths.html">All Paths</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="#" >About</a>
+                <a class="nav-link text-dark" href="./about.html" >About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="#">Community</a>
+                <a class="nav-link text-dark" href="./community.html">Community</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="#">Support us</a>
+                <a class="nav-link text-dark" href="./support.html">Support us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark">
+                <a href="./signup.html" class="nav-link text-dark">
                   Sign in</a>
               </li>
               <li class="nav-item">
@@ -44,7 +44,7 @@
                   <img src="./supportimg/images/icons8-sun.svg" class="w-50" onclick="myFunction()"></a>
               </li>
               <li class="nav-item">
-                <button class="button1 nav-link text-light">Get Started
+                <button class="button1 nav-link text-light"><a style="text-decoration: none; color: white;" href="./getstarted.html">Get Started</a>
                 </button>
               </li>
             </ul>
