--- a/signup.html
+++ b/signup.html
@@ -24,24 +24,24 @@
       <div class="collapse navbar-collapse " id="navbarNav">
         <ul class="navbar-nav ">
          <li class="nav-item">
-             <a class="nav-link active" aria-current="page" href="#">All paths</a>
+             <a class="nav-link active" aria-current="page" href="./all-paths.html">All paths</a>
          </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="./about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Community</a>
+            <a class="nav-link" href="./community.html">Community</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Support us</a>
+            <a class="nav-link" href="./support.html">Support us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="signup.html">Sign in</a>
+            <a class="nav-link" href="./signup.html">Sign in</a>
           </li>
         </ul>
         <img src="signupimg/icons8-sun-24.png" alt="" onclick="myFunction()">
         
-        <button class=" ms-3 btn btn-success shadow" type="submit">Search</button>
+        <button class=" ms-3 btn btn-success shadow" type="submit"><a href="./getstarted.html" class="link-light text-decoration-none">Get Started</a></button>
       </div>
     </div>
   </nav>
