--- a/about.html
+++ b/about.html
@@ -17,13 +17,82 @@
             crossorigin="anonymous"
         />
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="about-style.css">
 
     </head>
 
     <body>
         <header>
             
+            <nav class="navbar navbar-light container">
+                <div class="container-fluid">
+                    <a class="navbar-brand d-flex align-items-center" href="#">
+                        <img src="./about-images/odin-sama-removebg-preview.png" alt="" width="50" height="44" class="d-inline-block align-text-top">
+                        <span class="nav-odin-text odin-font">THE ODIN PROJECT</span>
+                    </a>
+                    <form class="d-flex justify-content-center">
+                        <ul class="nav align-items-center">
+                            <li class="nav-item nav-hover-custom">
+                                <a class="nav-link" href="./all-paths.html">All paths</a>
+                            </li>
+                            <li class="nav-item nav-hover-custom">
+                                <a class="nav-link" href="./about.html">About</a>
+                            </li>
+                            <li class="nav-item nav-hover-custom">
+                                <a class="nav-link" href="./community.html">Community</a>
+                            </li>
+                            <li class="nav-item nav-hover-custom">
+                                <a class="nav-link" href="./support.html">Support Us</a>
+                            </li>
+                            <li class="nav-item nav-hover-custom">
+                                <a class="nav-link" href="./signup.html">Sign in</a>
+                            </li>
+                            <li class="nav-item nav-hover-custom">
+                                <img src="./about-images/brightness-high.svg" alt="" class="img-fluid p-2 mx-2">
+                            </li>
+                            <li class="nav-item">
+                                <button class="btn nav-btn-custom btn-outline-success btn-sm"
+                                        type="submit"><a class="nav-link text-light" href="./getstarted.html">Get Started</a></button></a>
+                            </li>
+
+                            <li class="off-canvas-nav-item">
+                                <a class="btn" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+                                    <img src="./about-images/list.svg" alt="" width="150%">
+                                </a>
+                                
+                                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+                                    <div class="offcanvas-header">
+                                        <h5 class="offcanvas-title" id="offcanvasExampleLabel">
+                                            <a class="navbar-brand d-flex align-items-center odin-font" href="#">
+                                            <img src="./about-images/odin-sama-removebg-preview.png" alt="" width="50" height="44" class="d-inline-block align-text-top">
+                                            THE ODIN PROJECT
+                                            </a>
+                                        </h5>
+                                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                                    </div>
+                                    <div class="offcanvas-body">
+                                        <div class="list-group">
+                                            <a href="./index.html" class="list-group-item list-group-item-action d-flex align-items-center gap-3 border-0"><img src="./about-images/house-door.svg" alt="" class="off-canvas-images">home</a>
+                                            <a href="./all-paths.html" class="list-group-item list-group-item-action d-flex align-items-center gap-3 border-0"><img src="./about-images/map.svg" alt="" class="off-canvas-images">All Paths</a>
+                                            <a href="./about.html" class="list-group-item list-group-item-action d-flex align-items-center gap-3 border-0"><img src="./about-images/info-circle.svg" alt="" class="off-canvas-images">About</a>
+                                            <a href="./support.html" class="list-group-item list-group-item-action d-flex align-items-center gap-3 border-0"><img src="./about-images/suit-heart.svg" alt="" class="off-canvas-images">Support Us</a>
+                                            <a href="./community.html" class="list-group-item list-group-item-action d-flex align-items-center gap-3 border-0"><img src="./about-images/chat-left.svg" alt="" class="off-canvas-images">Community</a>
+                                            <hr>
+                                            <a href="./getstarted.html" class="list-group-item list-group-item-action d-flex align-items-center gap-3 border-0"><img src="./about-images/rocket-takeoff.svg" alt="" class="off-canvas-images">Get Started</a>
+                                            <a href="#" class="list-group-item list-group-item-action d-flex align-items-center gap-3 border-0"><img src="./about-images/brightness-high.svg" alt="" class="off-canvas-images">Light mode</a>
+                                            <a href="./signup.html" class="list-group-item list-group-item-action d-flex align-items-center gap-3 border-0"><img src="./about-images/box-arrow-in-left.svg" alt="" class="off-canvas-images">Sign in</a>                                         
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+
+                        </ul>
+                    </form>
+
+                </div>
+            </nav>
+
+
         </header>
 
 
@@ -43,7 +112,7 @@
                 <div class="col p-5 justify-content-center">
                     <div class="row align-items-center">
                         <div class="col-md-2 text-center">
-                            <img src="./images/img-education.svg" alt="" class="img-fluid">
+                            <img src="./about-images/img-education.svg" alt="" class="img-fluid">
                         </div>
                         <div class="col-md">
                             <h1 class="expect-row-head fs-4">A full roadmap to becoming a developer</h1>
@@ -53,7 +122,7 @@
                     </div>
                     <div class="row align-items-center mt-5">
                         <div class="col-md-2 text-center">
-                            <img src="./images/img-build.svg" alt="" class="img-fluid">
+                            <img src="./about-images/img-build.svg" alt="" class="img-fluid">
                         </div>
                         <div class="col-md">
                             <h1 class="expect-row-head fs-4">Learn by doing</h1>
@@ -64,7 +133,7 @@
                     </div>
                     <div class="row align-items-center mt-5">
                         <div class="col-md-2 text-center">
-                            <img src="./images/img-people.svg" alt="" class="img-fluid">
+                            <img src="./about-images/img-people.svg" alt="" class="img-fluid">
                         </div>
                         <div class="col-md">
                             <h1 class="expect-row-head fs-4">Recieve support from others</h1>
@@ -74,7 +143,7 @@
                     </div>
                     <div class="row align-items-center mt-5">
                         <div class="col-md-2 text-center">
-                            <img src="./images/img-opensource.svg" alt="" class="img-fluid">
+                            <img src="./about-images/img-opensource.svg" alt="" class="img-fluid">
                         </div>
                         <div class="col-md">
                             <h1 class="expect-row-head fs-4">Open source and community driven</h1>
@@ -110,7 +179,7 @@
                         </div>
                         <div class="col-lg overview p-5">
                             <div class="d-flex align-items-center">
-                                <img src="./images/icons8-github-48.png" alt="">
+                                <img src="./about-images/icons8-github-48.png" alt="">
                                 <h1 class="fs-3">Open Source</h1>
                             </div>
                             <p class="mt-5 fs-6">
@@ -125,7 +194,7 @@
                 <div class="container p-5">
                     <div class="row align-items-center">
                         <div class="col-lg-6">
-                            <img src="./images/odin-full-img-removebg-preview.png" alt="" class="img-fluid">
+                            <img src="./about-images/odin-full-img-removebg-preview.png" alt="" class="img-fluid">
                         </div>
                         <div class="col-lg-6 text-center">
                             <h1 class="fs-3">Want to contact us ?</h1>
@@ -154,13 +223,13 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="col-lg-4">
-                            <img src="./images/odin-sama.png" width="15%" alt=""><span class="ps-2">THE ODIN PROJECT</span></a>
+                            <img src="./about-images/odin-sama.png" width="15%" alt=""><span class="ps-2">THE ODIN PROJECT</span></a>
                             <p class="py-3">High quality coding education maintained by an open source community.</p>
                             <div class="app-logo-img d-flex gap-5 py-3">
-                                <img src="./images/icons8-github-48.png" alt=""  width="5%">
-                            <img src="./images/icons8-discord-50.png" alt=""  width="5%">
-                            <img src="./images/icons8-facebook-50.png" alt=""  width="5%">
-                            <img src="./images/icons8-twitter-30.png" alt=""  width="5%">
+                                <img src="./about-images/icons8-github-48.png" alt=""  width="5%">
+                            <img src="./about-images/icons8-discord-50.png" alt=""  width="5%">
+                            <img src="./about-images/icons8-facebook-50.png" alt=""  width="5%">
+                            <img src="./about-images/icons8-twitter-30.png" alt=""  width="5%">
                             </div>
                         </div>
                         <div class="col-lg-8 lh-lg">
