--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
               <h5>About us</h5>
             </div>
             <div class="row text-secondary pb-2">
-              <h6>About</h6>
+              <h6> <a href="about.html">About</a></h6>
             </div>
             <div class="row text-secondary pb-2">
               <h6>Team</h6>
