--- a/all-paths.html
+++ b/all-paths.html
@@ -287,16 +287,16 @@
                 <h5>About us</h5>
               </div>
               <div class="row text-secondary pb-2">
-                <h6>About</h6>
+               <a href="./about.html"> <h6>About</h6></a>
               </div>
               <div class="row text-secondary pb-2">
-                <h6>Team</h6>
+                <a href="footer-about-section.html"> <h6>Team</h6></a>
               </div>
               <div class="row text-secondary pb-2">
-                <h6>Blog</h6>
+               <a href="./blog.html"> <h6>Blog</h6></a>
               </div>
               <div class="row text-secondary">
-                <h6>Success Stories</h6>
+                <a href="./success.html"><h6>Success Stories</h6></a>
               </div>
             </div>
             <div class="col-lg-6 mt-2">
@@ -329,7 +329,7 @@
                 <h5>Legal</h5>
               </div>
               <div class="row text-secondary pb-2">
-                <h6>Terms</h6>
+                <a href="./terms.html"><h6>Terms</h6></a>
               </div>
               <div class="row text-secondary">
                 <h6>Privacy</h6>
