--- a/footer-about-section.html
+++ b/footer-about-section.html
@@ -32,19 +32,19 @@
         <form class="d-flex">
           <ul class="nav justify-content-end display-none-txt1">
             <li class="nav-item">
-              <a class="nav-link active link-dark fw-normal bottom-hover" aria-current="page" href="#">All Paths</a>
+              <a class="nav-link active link-dark fw-normal bottom-hover" aria-current="page" href="./all-paths.html">All Paths</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link link-dark fw-normal bottom-hover" href="#">About</a>
+              <a class="nav-link link-dark fw-normal bottom-hover" href="./about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link link-dark fw-normal bottom-hover" href="#">Community</a>
+              <a class="nav-link link-dark fw-normal bottom-hover" href="./community.html">Community</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link link-dark fw-normal bottom-hover" href="#">Support us</a>
+              <a class="nav-link link-dark fw-normal bottom-hover" href="./support.html">Support us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link link-dark fw-normal bottom-hover" href="#">Sign in</a>
+              <a class="nav-link link-dark fw-normal bottom-hover" href="signup.html">Sign in</a>
             </li>
             <li>
               <img src="./odin-project-images/icons8-brightness-30.png" onclick="myFunction()">
@@ -53,7 +53,7 @@
                       <a class="nav-link link-dark fw-normal" href="#"><img src="./odin-project-images/icons8-brightness-30.png"
                           alt="" class="w-75" onclick="myfunction()"></a>
                     </li> -->
-            <button class="btn btn-outline-success get-started-txt" type="submit">Get Started</button>
+             <button class="btn btn-outline-success get-started-txt" type="submit">  <a href="./getstarted.html">Get Started</a></button>
 
           </ul>
         </form>
@@ -100,19 +100,19 @@
             </div>
             <div class="d-flex">
               <ul>
-                <a href="">
+                <a href="./index.html">
                   <li class="img-txt">home</li>
                 </a>
-                <a href="">
+                <a href="./all-paths.html">
                   <li class="pt-4 img-txt">All Paths</li>
                 </a>
-                <a href="">
+                <a href="./about.html">
                   <li class="pt-4 img-txt">About</li>
                 </a>
-                <a href="">
+                <a href="./support.html">
                   <li class="pt-4 img-txt">Support Us</li>
                 </a>
-                <a href="">
+                <a href="./community.html">
                   <li class="pt-4 img-txt">Community</li>
                 </a>
                 <!-- <li class="pt-4">home</li> -->
@@ -759,27 +759,7 @@
 
 
           </div>
-          <!-- 
-          <div class="col-md-2 bg-body shadow rounded bg-light">
-            <div class="text-center pt-4"><img src="./footer-about-section-image/kevin mulhern.jpeg" alt=""
-                class=" rounded-circle rounded-img">
-              <div>
-                <div class="p-3">
-                  <div class="text-center shadow-box-name-txt">Kevin Mulhern</div>
-                  <div class="text-center shadow-box-date-txt pt-1">Joined 2015 · Ireland</div>
-                  <div class="row pt-3">
-                    <div class="col">
-                      <div class=" pt-5 d-flex justify-content-evenly">
-                        <img src="./footer-about-section-image/icons8-github-24.png" alt="">
-                        <img src="./footer-about-section-image/icons8-twitter-30 (1).png" alt="">
-                        <img src="./footer-about-section-image/icons8-linked-in-30.png" alt="">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
+         
         </div>
       </div>
       <div>
@@ -888,13 +868,13 @@
               <h6> <a href="about.html">About</a></h6>
             </div>
             <div class="row text-secondary pb-2">
-              <h6>Team</h6>
+              <a href="./footer-about-section.html"><h6>Team</h6></a>
             </div>
             <div class="row text-secondary pb-2">
-              <h6>Blog</h6>
+              <a href="./blog.html"><h6>Blog</h6></a>
             </div>
             <div class="row text-secondary">
-              <h6>Success Stories</h6>
+             <a href="./success.html"><h6>Success Stories</h6></a>
             </div>
           </div>
           <div class="col-lg-6 mt-2">
@@ -927,7 +907,7 @@
               <h5>Legal</h5>
             </div>
             <div class="row text-secondary pb-2">
-              <h6>Terms</h6>
+             <a href="./terms.html"> <h6>Terms</h6></a>
             </div>
             <div class="row text-secondary">
               <h6>Privacy</h6>
