--- a/terms.html
+++ b/terms.html
@@ -273,7 +273,7 @@
               <h6><a href="../odin-project-grp-1/terms.html">Terms</a></h6>
             </div>
             <div class="row text-secondary">
-              <h6>Privacy</h6>
+              <h6><a href="../odin-project-grp-1/privacy.html">Privacy</a></h6>
             </div>
           </div></div></div>
         </div>
