--- a/javascript.html
+++ b/javascript.html
@@ -551,10 +551,10 @@
                   <h5>Legal</h5>
                 </div>
                 <div class="row text-secondary pb-2">
-                  <h6 class="footertext2">Terms</h6>
+                  <h6 class="footertext2"><a href="../odin-project-grp-1/terms.html">Terms</a></h6>
                 </div>
                 <div class="row text-secondary">
-                  <h6 class="footertext2">Privacy</h6>
+                  <h6 class="footertext2"><a href="../odin-project-grp-1/privacy.html">Privacy</a></h6>
                 </div>
               </div></div></div>
             </div>
