--- a/success.html
+++ b/success.html
@@ -403,10 +403,10 @@ Odin taught me all the most crucial skills in webdev and gave me an incredibly s
                       <h5>Legal</h5>
                     </div>
                     <div class="row text-secondary pb-2">
-                      <h6>Terms</h6>
+                      <h6><a href="../odin-project-grp-1/terms.html">Terms</a></h6>
                     </div>
                     <div class="row text-secondary">
-                      <h6>Privacy</h6>
+                      <h6><a href="../odin-project-grp-1/privacy.html"></a>Privacy</h6>
                     </div>
                   </div></div></div>
                 </div>
