--- a/support.html
+++ b/support.html
@@ -132,8 +132,8 @@
   </div>
   <div class="col-lg-3 col-md-3 col-sm-6">
     <p><b>Legal</b></p>
-    <a href="" class="footera">Terms</a>
-    <a href="" class="footera">Privacy</a>
+    <a href="../odin-project-grp-1/terms.html" class="footera">Terms</a>
+    <a href="../odin-project-grp-1/privacy.html" class="footera">Privacy</a>
   </div>
 </div>
 </div>
