updated footer links

--- a/about.html
+++ b/about.html
@@ -239,18 +239,18 @@
                                         <div class="col-md-6">
                                             <ul>
                                                 <li><h1 class="fs-5">About</h1></li>
-                                                <li>About</li>
-                                                <li>Team</li>
-                                                <li>Blog</li>
-                                                <li>Success stories</li>
+                                                <li><a class="text-secondary text-decoration-none" href="./about.html">About</a></li>
+                                                <li><a class="text-secondary text-decoration-none" href="./footer-about-section.html">Team</a></li>
+                                                <li><a class="text-secondary text-decoration-none" href="./blog.html">Blog</a></li>
+                                                <li><a class="text-secondary text-decoration-none" href="./success.html">Success stories</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-6">
                                             <ul>
                                                 <li><h1 class="fs-5">Support us</h1></li>
-                                                <li>FAQ</li>
-                                                <li>Contribute</li>
-                                                <li>Contact us</li>
+                                                <li><a class="text-secondary text-decoration-none" href="">FAQ</a></li>
+                                                <li><a class="text-secondary text-decoration-none"href="">Contribute</a></li>
+                                                <li><a class="text-secondary text-decoration-none" href="">Contact us</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -260,15 +260,15 @@
                                         <div class="col-md-6">
                                             <ul>
                                                 <li><h1 class="fs-5">Guides</h1></li>
-                                                <li>Community guides</li>
-                                                <li>Installation guides</li>
+                                                <li><a class="text-secondary text-decoration-none" href="./Communityguides.html">Community guides</a></li>
+                                                <li><a class="text-secondary text-decoration-none" href="./Installationguides.html">Installation guides</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-6">
                                             <ul>
                                                 <li><h1 class="fs-5">Legal</h1></li>
-                                                <li>Terms</li>
-                                                <li>Privacy</li>
+                                                <li><a class="text-secondary text-decoration-none" href="./terms.html">Terms</a></li>
+                                                <li><a class="text-secondary text-decoration-none" href="./privacy.html">Privacy</a></li>
                                             </ul>
                                         </div>
                                     </div>
