--- a/footer-about-section.html
+++ b/footer-about-section.html
@@ -882,10 +882,10 @@
               <h5>Guides</h5>
             </div>
             <div class="row text-secondary pb-2">
-              <h6>Community guides</h6>
+              <h6><a href="./Communityguides.html">Community guides</a></h6>
             </div>
             <div class="row text-secondary">
-              <h6>Installation guides</h6>
+              <h6><a href="./Installationguides.html">Installation guides</a></h6>
             </div>
           </div></div></div>
           <div class="col mx-5"><div class="row"><div class="col-lg-6 mt-2">
@@ -910,7 +910,7 @@
              <a href="./terms.html"> <h6>Terms</h6></a>
             </div>
             <div class="row text-secondary">
-              <h6>Privacy</h6>
+              <h6><a href="./privacy.html">Privacy</a></h6>
             </div>
           </div></div></div>
         </div>
