--- a/nodejs.html
+++ b/nodejs.html
@@ -479,16 +479,16 @@
                   <h5>About us</h5>
                 </div>
                 <div class="row text-secondary pb-2">
-                  <h6 class="footertext2">About</h6>
+                  <h6 class="footertext2"><a class="text-secondary" href="./about.html">About</a></h6>
                 </div>
                 <div class="row text-secondary pb-2">
-                  <h6 class="footertext2">Team</h6>
+                  <h6 class="footertext2"><a class="text-secondary" href="./footer-about-section.html">Team</a></h6>
                 </div>
                 <div class="row text-secondary pb-2">
-                  <h6 class="footertext2">Blog</h6>
+                  <h6 class="footertext2"><a class="text-secondary" href="./blog.html">Blog</a></h6>
                 </div>
                 <div class="row text-secondary">
-                  <h6 class="footertext2">Success Stories</h6>
+                  <h6 class="footertext2"><a class="text-secondary" href="./success.html">Success Stories</a></h6>
                 </div>
               </div><div class="col-lg-6 mt-2 legalfooter">
                 <div class="row pb-2">
@@ -512,10 +512,10 @@
                   <h5>Guides</h5>
                 </div>
                 <div class="row text-secondary pb-2">
-                  <h6 class="footertext2">Community guides</h6>
+                  <h6 class="footertext2"><a class="text-secondary" href="./Communityguides.html">Community guides</a></h6>
                 </div>
                 <div class="row text-secondary">
-                  <h6 class="footertext2">Installation guides</h6>
+                  <h6 class="footertext2"><a class="text-secondary" href="./Installationguides.html">Installation guides</a></h6>
                 </div>
               </div>
               <div class="col-lg-6 mt-2 legalfooter1">
@@ -523,10 +523,10 @@
                   <h5>Legal</h5>
                 </div>
                 <div class="row text-secondary pb-2">
-                  <h6 class="footertext2">Terms</h6>
+                  <h6 class="footertext2"><a class="text-secondary" href="./terms.html">Terms</a></h6>
                 </div>
                 <div class="row text-secondary">
-                  <h6 class="footertext2">Privacy</h6>
+                  <h6 class="footertext2"><a class="text-secondary" href="./privacy.html">Privacy</a></h6>
                 </div>
               </div></div></div>
             </div>
