--- a/privacy.html
+++ b/privacy.html
@@ -277,10 +277,10 @@
                                         <h6> <a href="about.html">About</a></h6>
                                     </div>
                                     <div class="row text-secondary pb-2">
-                                        <h6>Team</h6>
+                                        <h6><a href="./footer-about-section.html">Team</a></h6>
                                     </div>
                                     <div class="row text-secondary pb-2">
-                                        <h6>Blog</h6>
+                                        <h6><a href="./blog.html">Blog</a></h6>
                                     </div>
                                     <div class="row text-secondary">
                                         <h6><a href="../odin-project-grp-1/success.html">Success Stories</a></h6>
@@ -291,10 +291,10 @@
                                         <h5>Guides</h5>
                                     </div>
                                     <div class="row text-secondary pb-2">
-                                        <h6>Community guides</h6>
+                                        <h6><a href="./Communityguides.html">Community guides</a></h6>
                                     </div>
                                     <div class="row text-secondary">
-                                        <h6>Installation guides</h6>
+                                        <h6><a href="./Installationguides.html">Installation guides</a></h6>
                                     </div>
                                 </div>
                             </div>
@@ -320,10 +320,10 @@
                                         <h5>Legal</h5>
                                     </div>
                                     <div class="row text-secondary pb-2">
-                                        <h6><a href="../odin-project-grp-1/terms.html">Terms</a></h6>
+                                        <h6><a href="./terms.html">Terms</a></h6>
                                     </div>
                                     <div class="row text-secondary">
-                                        <h6><a href="../odin-project-grp-1/privacy.html">Privacy</a></h6>
+                                        <h6><a href="./privacy.html">Privacy</a></h6>
                                     </div>
                                 </div>
                             </div>
