--- a/react.html
+++ b/react.html
@@ -450,16 +450,16 @@
                   <h5>About us</h5>
                 </div>
                 <div class="row text-secondary pb-2">
-                  <h6 class="footertext2">About</h6>
+                  <h6 class="footertext2"><a class="text-secondary text-decoration-none" href="./about.html">About</a></h6>
                 </div>
                 <div class="row text-secondary pb-2">
-                  <h6 class="footertext2">Team</h6>
+                  <h6 class="footertext2"><a class="text-secondary text-decoration-none" href="./footer-about-section.html">Team</a></h6>
                 </div>
                 <div class="row text-secondary pb-2">
-                  <h6 class="footertext2">Blog</h6>
+                  <h6 class="footertext2"><a class="text-secondary text-decoration-none" href="./blog.html">Blog</a></h6>
                 </div>
                 <div class="row text-secondary">
-                  <h6 class="footertext2">Success Stories</h6>
+                  <h6 class="footertext2"><a class="text-secondary text-decoration-none" href="./success.html">Success Stories</a></h6>
                 </div>
               </div><div class="col-lg-6 mt-2 legalfooter">
                 <div class="row pb-2">
@@ -483,10 +483,10 @@
                   <h5>Guides</h5>
                 </div>
                 <div class="row text-secondary pb-2">
-                  <h6 class="footertext2">Community guides</h6>
+                  <h6 class="footertext2"><a class="text-secondary text-decoration-none" href="./Communityguides.html">Community guides</a></h6>
                 </div>
                 <div class="row text-secondary">
-                  <h6 class="footertext2">Installation guides</h6>
+                  <h6 class="footertext2"><a class="text-secondary text-decoration-none" href="./Installationguides.html">Installation guides</a></h6>
                 </div>
               </div>
               <div class="col-lg-6 mt-2 legalfooter1">
@@ -494,10 +494,10 @@
                   <h5>Legal</h5>
                 </div>
                 <div class="row text-secondary pb-2">
-                  <h6 class="footertext2">Terms</h6>
+                  <h6 class="footertext2"><a class="text-secondary text-decoration-none" href="./terms.html">Terms</a></h6>
                 </div>
                 <div class="row text-secondary">
-                  <h6 class="footertext2">Privacy</h6>
+                  <h6 class="footertext2"><a class="text-secondary text-decoration-none" href="./privacy.html">Privacy</a></h6>
                 </div>
               </div></div></div>
             </div>
