--- a/support.html
+++ b/support.html
@@ -141,26 +141,26 @@
   <div class="col-lg-6 col-md-6  col-sm-6 d-flex pb-5">
     <div style="padding-right: 30%;">
     <p><b>About us</b></p>
-    <a href="" class="footera">About</a>
-    <a href="" class="footera">Team</a>
-    <a href="" class="footera">Blog</a>
-    <a href="" class="footera">Success Stories  </a></div>
+    <a href="./about.html" class="footera">About</a>
+    <a href="./footer-about-section.html" class="footera">Team</a>
+    <a href="./blog.html" class="footera">Blog</a>
+    <a href="./success.html" class="footera">Success Stories  </a></div>
     <div  style="padding-right: 30%;">
     <p><b>Support</b></p>
-    <a href="" class="footera">FAQ</a>
-    <a href="" class="footera">Contribute</a>
-    <a href="" class="footera">Contact us</a>
+    <a href="./" class="footera">FAQ</a>
+    <a href="./" class="footera">Contribute</a>
+    <a href="./about.html" class="footera">Contact us</a>
   </div></div>
   <div class="col-lg-6 col-md-6 col-sm-6 d-flex">
     <div  style="margin-right: 30%;">
     <p><b>Guides</b></p>
-    <a href="" class="footera">Community guides</a>
-    <a href="" class="footera">Installation guides</a>
+    <a href="./Communityguides.html" class="footera">Community guides</a>
+    <a href="./Installationguides.html" class="footera">Installation guides</a>
   </div>
   <div  style="margin-right: 30%;">
     <p><b>Legal</b></p>
-    <a href="../odin-project-grp-1/terms.html" class="footera">Terms</a>
-    <a href="../odin-project-grp-1/privacy.html" class="footera">Privacy</a>
+    <a href="./terms.html" class="footera">Terms</a>
+    <a href="./privacy.html" class="footera">Privacy</a>
   </div>
 </div>
 </div>
