--- a/Installationguides.html
+++ b/Installationguides.html
@@ -118,10 +118,10 @@
   <div class="col-lg-6 col-md-6  col-sm-6 d-flex pb-5">
     <div style="padding-right: 30%;">
     <p><b>About us</b></p>
-    <a href="" class="footera">About</a>
-    <a href="" class="footera">Team</a>
-    <a href="" class="footera">Blog</a>
-    <a href="" class="footera ">Success.Stories</a></div>
+    <a href="./about.html" class="footera">About</a>
+    <a href="./footer-about-section.html" class="footera">Team</a>
+    <a href="./blog.html" class="footera">Blog</a>
+    <a href="./success.html" class="footera ">Success.Stories</a></div>
     <div  style="padding-right: 30%;">
     <p><b>Support</b></p>
     <a href="" class="footera">FAQ</a>
@@ -136,8 +136,8 @@
   </div>
   <div  style="margin-right: 30%;">
     <p><b>Legal</b></p>
-    <a href="" class="footera">Terms</a>
-    <a href="" class="footera">Privacy</a>
+    <a href="./terms.html" class="footera">Terms</a>
+    <a href="./privacy.html" class="footera">Privacy</a>
   </div>
 </div>
 </div>
