--- a/getstarted.html
+++ b/getstarted.html
@@ -127,16 +127,16 @@
                                 <h5>About us</h5>
                             </div>
                             <div class="row text-secondary pb-2">
-                                <h6>About</h6>
+                                <h6><a class="text-secondary text-decoration-none" href="about.html">About</a></h6>
                             </div>
                             <div class="row text-secondary pb-2">
-                                <h6>Team</h6>
+                                <h6><a class="text-secondary text-decoration-none" href="./footer-about-section.html">Team</a></h6>
                             </div>
                             <div class="row text-secondary pb-2">
-                                <h6>Blog</h6>
+                                <h6><a class="text-secondary text-decoration-none" href="./blog.html">Blog</a></h6>
                             </div>
                             <div class="row text-secondary">
-                                <h6>Success Stories</h6>
+                                <h6><a class="text-secondary text-decoration-none" href="./success.html">Success Stories</a></h6>
                             </div>
                         </div>
                         <div class="col-lg-6 mt-2">
@@ -144,10 +144,10 @@
                                 <h5>Guides</h5>
                             </div>
                             <div class="row text-secondary pb-2">
-                                <h6>Community guides</h6>
+                                <h6><a class="text-secondary text-decoration-none" href="./Communityguides.html">Community guides</a></h6>
                             </div>
                             <div class="row text-secondary">
-                                <h6>Installation guides</h6>
+                                <h6><a class="text-secondary text-decoration-none" href="./Installationguides.html">Installation guides</a></h6>
                             </div>
                         </div>
                     </div>
@@ -173,10 +173,10 @@
                                 <h5>Legal</h5>
                             </div>
                             <div class="row text-secondary pb-2">
-                                <h6><a href="../odin-project-grp-1/terms.html">Terms</a></h6>
+                                <h6><a class="text-secondary text-decoration-none" href="../odin-project-grp-1/terms.html">Terms</a></h6>
                             </div>
                             <div class="row text-secondary">
-                                <h6><a href="../odin-project-grp-1/privacy.html">Privacy</a></h6>
+                                <h6><a class="text-secondary text-decoration-none" href="../odin-project-grp-1/privacy.html">Privacy</a></h6>
                             </div>
                         </div>
                     </div>
