--- a/index.html
+++ b/index.html
@@ -371,13 +371,13 @@
               <h6> <a href="about.html">About</a></h6>
             </div>
             <div class="row text-secondary pb-2">
-              <h6>Team</h6>
+              <h6><a href="./footer-about-section.html">Team</a></h6>
             </div>
             <div class="row text-secondary pb-2">
-              <h6>Blog</h6>
+              <h6><a href="./blog.html">Blog</a></h6>
             </div>
             <div class="row text-secondary">
-              <h6>Success Stories</h6>
+              <h6><a href="success.html">Success Stories</a></h6>
             </div>
           </div>
           <div class="col-lg-6 mt-2">
@@ -385,10 +385,10 @@
               <h5>Guides</h5>
             </div>
             <div class="row text-secondary pb-2">
-              <h6>Community guides</h6>
+              <h6><a href="./Communityguides.html">Community guides</a></h6>
             </div>
             <div class="row text-secondary">
-              <h6>Installation guides</h6>
+              <h6><a href="./Installationguides.html">Installation guides</a></h6>
             </div>
           </div></div></div>
           <div class="col mx-5"><div class="row"><div class="col-lg-6 mt-2">
