--- a/rubyOnRails.html
+++ b/rubyOnRails.html
@@ -226,10 +226,10 @@
                                             <li>
                                                 <h1 class="fs-5">About</h1>
                                             </li>
-                                            <li>About</li>
-                                            <li>Team</li>
-                                            <li>Blog</li>
-                                            <li>Success stories</li>
+                                            <li><a class="text-secondary text-decoration-none" href="./about.html">About</a></li>
+                                            <li><a class="text-secondary text-decoration-none" href="./footer-about-section.html">Team</a></li>
+                                            <li><a class="text-secondary text-decoration-none" href="./blog.html">Blog</a></li>
+                                            <li><a class="text-secondary text-decoration-none" href="./success.html">Success stories</a></li>
                                         </ul>
                                     </div>
                                     <div class="col-md-6">
@@ -251,8 +251,8 @@
                                             <li>
                                                 <h1 class="fs-5">Guides</h1>
                                             </li>
-                                            <li>Community guides</li>
-                                            <li>Installation guides</li>
+                                            <li><a class="text-secondary text-decoration-none" href="./Communityguides.html">Community guides</a></li>
+                                            <li><a class="text-secondary text-decoration-none"href="./Installationguides.html">Installation guides</a></li>
                                         </ul>
                                     </div>
                                     <div class="col-md-6">
@@ -260,8 +260,8 @@
                                             <li>
                                                 <h1 class="fs-5">Legal</h1>
                                             </li>
-                                            <li>Terms</li>
-                                            <li>Privacy</li>
+                                            <li><a class="text-secondary text-decoration-none"href="./terms.html">Terms</a></li>
+                                            <li><a class="text-secondary text-decoration-none" href="./privacy.html">Privacy</a></li>
                                         </ul>
                                     </div>
                                 </div>
