--- a/success.html
+++ b/success.html
@@ -361,16 +361,16 @@ Odin taught me all the most crucial skills in webdev and gave me an incredibly s
                       <h5>About us</h5>
                     </div>
                     <div class="row text-secondary pb-2">
-                      <h6>About</h6>
+                      <h6><a href="./about.html">About</a></h6>
                     </div>
                     <div class="row text-secondary pb-2">
-                      <h6>Team</h6>
+                      <h6><a href="./footer-about-section.html">Team</a></h6>
                     </div>
                     <div class="row text-secondary pb-2">
-                      <h6>Blog</h6>
+                      <h6><a href="./blog.html">Blog</a></h6>
                     </div>
                     <div class="row text-secondary">
-                      <h6>Success Stories</h6>
+                      <h6><a href="./success.html">Success Stories</a></h6>
                     </div>
                   </div>
                   <div class="col-lg-6 mt-2">
@@ -378,10 +378,10 @@ Odin taught me all the most crucial skills in webdev and gave me an incredibly s
                       <h5>Guides</h5>
                     </div>
                     <div class="row text-secondary pb-2">
-                      <h6>Community guides</h6>
+                      <h6><a href="./Communityguides.html">Community guides</a></h6>
                     </div>
                     <div class="row text-secondary">
-                      <h6>Installation guides</h6>
+                      <h6><a href="./Installationguides.html">Installation guides</a></h6>
                     </div>
                   </div></div></div>
                   <div class="col mx-5"><div class="row"><div class="col-lg-6 mt-2">
@@ -403,10 +403,10 @@ Odin taught me all the most crucial skills in webdev and gave me an incredibly s
                       <h5>Legal</h5>
                     </div>
                     <div class="row text-secondary pb-2">
-                      <h6><a href="../odin-project-grp-1/terms.html">Terms</a></h6>
+                      <h6><a href="./terms.html">Terms</a></h6>
                     </div>
                     <div class="row text-secondary">
-                      <h6><a href="../odin-project-grp-1/privacy.html"></a>Privacy</h6>
+                      <h6><a href="./privacy.html">Privacy</a></h6>
                     </div>
                   </div></div></div>
                 </div>
